--- a/src/clairecut-webapp-app/clairecut-webapp-app.html
+++ b/src/clairecut-webapp-app/clairecut-webapp-app.html
@@ -3,7 +3,7 @@
 <link rel="import" href="../../bower_components/iron-swipeable-container/iron-swipeable-container.html">
 
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../../bower_components/iron-icons/communication-icons.html">
+<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../bower_components/iron-icons/image-icons.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../bower_components/paper-fab/paper-fab.html">
@@ -59,6 +59,10 @@
                 max-width: 966px;
             }
 
+            neon-animatable, body, html, video {
+                background: white;
+            }
+
             neon-animated-pages canvas {
                 position: fixed;
                 top: 0;
@@ -75,29 +79,19 @@
                              exit-animation="slide-from-right-animation">
             <neon-animatable key="camera">
                 <video class="video" autoplay></video>
-                <paper-fab mini raised on-tap="nextDevice" class="btn--change" label="{{devices.length}}">
-                    <iron-icon icon="image:switch-camera"></iron-icon>
-                </paper-fab>
-                <paper-fab raised on-tap="takeImage" class="btn--snap">
-                    <iron-icon icon="image:camera"></iron-icon>
-                </paper-fab>
+                <paper-fab mini raised on-tap="nextDevice" icon="image:switch-camera" class="btn--change"></paper-fab>
+                <paper-fab raised on-tap="takeImage" class="btn--snap" icon="image:camera"></paper-fab>
             </neon-animatable>
             <neon-animatable key="image">
-                <paper-fab elevation="5" raised on-tap="back" class="btn--back">
-                    <iron-icon icon="back"></iron-icon>
-                </paper-fab>
+                <paper-fab elevation="5" raised on-tap="back" class="btn--back" icon="icons:arrow-back"></paper-fab>
                 <div>
                     <canvas width="480" height="320"></canvas>
                     <img/>
                 </div>
-                <paper-fab raised on-tap="sendImage" class="btn--snap">
-                    <iron-icon icon="communication:message"></iron-icon>
-                </paper-fab>
+                <paper-fab raised on-tap="sendImage" class="btn--snap" icon="icons:send"></paper-fab>
             </neon-animatable>
             <neon-animatable key="results">
-                <paper-fab elevation="5" raised on-tap="back" class="btn--back">
-                    <iron-icon icon="back"></iron-icon>
-                </paper-fab>
+                <paper-fab elevation="5" raised on-tap="back" class="btn--back" icon="icons:arrow-back"></paper-fab>
                 <template is="dom-repeat" items="{{pieces}}" as="item">
                     <div>
                         <h2>{{item.color}}</h2>
